--- a/src/styles/modules/projects.module.css
+++ b/src/styles/modules/projects.module.css
@@ -14,6 +14,7 @@
     gap: 1rem;
 }
 
+
 .filter_container {
     margin-bottom: var(--mobile-vertical-space);
 }
@@ -224,6 +225,7 @@
     overflow: hidden;
     width: 18.75rem;
     flex: 0 0 auto;
+    position: relative;
 }
 
 [data-theme='dark'] .project_card {
