--- a/src/styles/modules/single.module.css
+++ b/src/styles/modules/single.module.css
@@ -227,6 +227,7 @@
     flex-direction: column;
     background-color: var(--main-color);
     flex: 0 0 auto;
+    position: relative;
 }
 
 
